texturemap a texture from video

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>threejs helloworld</title>
+    <title>threejs texturemap</title>
 </head>
 
 <body>
