--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>threejs texturemap</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="default.css" />
 </head>
 
 <body>
